fix dictionary url, handle no selection

--- a/popup.html
+++ b/popup.html
@@ -63,7 +63,7 @@
         </symbol>
       </defs>
     </svg>
-    <div class="popup">
+    <div class="popup" id="popup">
       <div class="word">
         <span id="word" class="bold-text word-text">hello</span>
         <i id="phonetic">loading...</i>
