--- a/popup.html
+++ b/popup.html
@@ -82,21 +82,21 @@
         <svg id="js-howjsay" class="btn icon icon-volume-medium">
           <use xlink:href="#icon-volume-medium"></use>
         </svg>
-        <i>Alt+Shift+J</i>
+        <i>Ctrl+Shift+J</i>
       </div>
       <div class="sound">
         <p class="sound__title">Oxford US</p>
         <svg id="js-ox-us" class="btn icon icon-volume-medium">
           <use xlink:href="#icon-volume-medium"></use>
         </svg>
-        <i>Alt+Shift+S</i>
+        <i>Ctrl+Shift+S</i>
       </div>
       <div class="sound">
         <p class="sound__title">Oxford UK</p>
         <svg id="js-ox-uk" class="btn icon icon-volume-medium">
           <use xlink:href="#icon-volume-medium"></use>
         </svg>
-        <i>Alt+Shift+K</i>
+        <i>Ctrl+Shift+K</i>
       </div>
       <div>
         <h4 class="bold-text">Definitions</h4>
